--- a/css/medias_queries.css
+++ b/css/medias_queries.css
@@ -59,3 +59,17 @@ article {
 .image img{
     width: 200px;
 }
+@media  print 
+{
+   #main_container
+   {
+       display: flex;
+       flex-direction: column;
+   }
+   
+    .pub{
+        display: none;
+    }
+   
+    
+}
